<resources>
    <string name="app_name">Driven</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="login">Login</string>
    <string name="or_login_using">Or login using</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="make_an_account_with_us">Make an Account with us</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="stream">Stream</string>
    <string name="settings">Settings</string>
    <string name="local">Local</string>
    <string name="explore">Explore</string>
    <string name="on_device">On Device</string>
    <string name="songs">Songs</string>
    <string name="charts">Charts</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="recently_added">Recently Added</string>
    <string name="search">Search</string>
    <string name="liked">Liked</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="playlists">Playlists</string>
    <string name="external_charts">External Charts</string>
    <string name="spotify">Spotify</string>
    <string name="deezer">Deezer</string>
    <string name="new_releases">New Releases</string>
    <string name="top_songs">Top Songs</string>
    <string name="please_note_that_this_section_is_preview_only">Please note that this section is preview only</string>
    <string name="online_content">Online Content</string>
    <string name="top_results">Top Results</string>
    <string name="top_tracks">Top Tracks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="new_list">New List</string>
    <string name="liked_tracks">Liked Tracks</string>
    <string name="total_tracks_0">Total Tracks: 0</string>
    <string name="spot">Spot</string>
    <string name="ify">ify</string>
    <string name="zer">zer</string>
    <string name="dee">Dee</string>
    <string name="add_to_likes">Add to likes</string>
    <string name="play_now">Play Now</string>
    <string name="view_album">View Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="song_info">Song Info</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="failed_to_authenticate">Failed to authenticate</string>
    <string name="password_criteria">Your password must: \n - Have at least one number \n - Have at least one Uppercase character \n- Have at least one Lower case character \n - Be at least 8 characters long \n - Both passwords must match</string>
    <string name="close">Close</string>
    <string name="okay">Okay</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_for_a_reset_link">Enter your email for a reset link</string>
</resources>