<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".charts.ChartsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?cardBackgroundColor"
                android:drawablePadding="8dp"
                android:drawableEnd="@drawable/ic_spotify"
                android:drawableTint="?colorPrimary"
                android:elevation="8dp"
                android:paddingTop="24dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/external_charts"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?android:textColorSecondary"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/please_note_that_this_section_is_preview_only"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textSize="11sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/spotify"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="126dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@raw/image_five"
                    android:scaleType="centerCrop"
                    android:alpha="0.3"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spotify_background"
                    android:text="@string/new_releases"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_spotify_logo"
                    app:iconTint="@null" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/deezer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="126dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@raw/image_six"
                    android:scaleType="centerCrop"
                    android:alpha="0.3"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/deezer_background"
                    android:text="@string/top_songs"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_deezer"
                    app:iconTint="@null" />

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/now_playing_layout"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu" />

</androidx.appcompat.widget.LinearLayoutCompat>